login page overflow hidden to stop mobile scroll

--- a/accounts/static/newcss/login.css
+++ b/accounts/static/newcss/login.css
@@ -2,6 +2,7 @@ body {
     background-color: #BFC1C2;
     font-family: 'Futura PT';
     overflow-x: hidden;
+    overflow: hidden;
     position: relative;
 }
 
